--- a/src/styles.css
+++ b/src/styles.css
@@ -209,12 +209,12 @@ h2 {
 }
 h2:before {
     position: absolute;
-    width: 20%;
-    height: 0px;
+    /* width: 20%; */
+    /* height: 0px; */
     content: "";
     left: 40%;
     right: 40%;
-    top: 38px;
+    top: 46px;
     display: flex;
     border-bottom: 1px;
     border-style: groove;
@@ -247,4 +247,3 @@ thead th{
         width: 100%;
     }
 }
-
