--- a/src/app/components/contactus/contactus.component.css
+++ b/src/app/components/contactus/contactus.component.css
@@ -1,8 +1,14 @@
-.main{
+.main {
     border: 1px solid silver;
     border-radius: 5px;
     padding: 20px;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     width: 50%;
     margin: auto;
+}
+
+@media screen and (max-width: 480px){
+    .main {
+        width: 90%;
+    }
 }
