--- a/src/styles.css
+++ b/src/styles.css
@@ -94,13 +94,14 @@ html {
 
 button,
 .btn {
-    background: yellow !important;
+    background: #febe00 !important;
     color: #000 !important;
 }
 
 button,
 .btn {
-    background: yellow !important;
+    background: #febe00 !important;
+    color:white;
 }
 
 .cardImgMain {
@@ -172,11 +173,13 @@ button,
 
 .abhead {
     color: #999;
+    border-bottom: 2px solid #999;
     text-transform: uppercase;
+    width: 103px;
 }
 
 .abMainhead {
-    margin: 30px 0;
+    /* margin: 30px 0; */
     font-family: auto;
 }
 
@@ -188,8 +191,9 @@ button,
     padding: 10px 0;
 }
 .btn:hover {
-    background: #dab200 !important;
+    background: #febe00 !important;
     transition-duration: 0.5s;
+    color:white;
 }
 .navbar-expand-sm .navbar-collapse {
     justify-content: end;
@@ -207,7 +211,7 @@ h2 {
     position: relative;
     margin-bottom: 31px !important;
 }
-h2:before {
+/* h2:before {
     position: absolute;
     width: 20%;
     height: 0px;
@@ -218,7 +222,7 @@ h2:before {
     display: flex;
     border-bottom: 1px;
     border-style: groove;
-}
+} */
 /* .pageStart {
     min-height: 73vh;
 } */
@@ -226,6 +230,19 @@ thead th{
     background-color: #000 !important;
     color: #febe00 !important;
     text-align: center !important;
+}
+@media screen and (min-width:320px) and (max-width:480px){
+    h4.abhead {
+        margin: auto;
+        margin-bottom: 20px;
+}
+    button,
+.btn {
+    background:#febe00 !important;
+    /* color: #000 !important; */
+    color:white;
+    margin-bottom: 20px;
+}
 }
 @media screen and (max-width: 749px) {
     ul.nav.navbar-nav * {
