--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,9 +1,67 @@
-<section class="footer mb-5 mt-5 dark-bg">
-    <div class="blockcode">
-        <footer class="page-footer shadow">
-          <div class="d-flex flex-column text-center color">
-            &copy; Event Organizer, 2024. All rights reserved.
-          </div>
-        </footer>
+<div class="container-fluid mb-0 footer-container">
+  <div class="row">
+    <div class="col-12 text-center border-bottom">
+      <h1 class="m-0 py-5"><img src="https://www.pngarts.com/files/1/Letter-E-Transparent-Background-PNG.png" alt="">vent Organizer</h1>
+    </div>
+    <div class="row nav-container mt-lg-3 m-auto d-flex justify-content-around pb-5">
+      <div class="col-lg-3 col-md-3 col-sm-3 text-center mt-lg-5 mt-md-5 nav-content">
+        <h4 class="text-start">About Us</h4>
+        <hr>
+        <ul class="text-start">
+          <li><a routerLink="/aboutus" class="text-decoration-none">About</a></li>
+          <li><a routerLink="/login" class="text-decoration-none">Events</a></li>
+          <li><a routerLink="/aboutus" class="text-decoration-none">Career</a></li>
+        </ul>
       </div>
+      <div class="col-lg-3 col-md-3 col-sm-3 text-center mt-lg-5 mt-md-5 nav-content">
+        <h4 class="text-start">Contact us</h4>
+        <hr>
+        <ul class="text-start">
+          <li><a class="text-decoration-none">+91 8983048428</a></li>
+          <li><a class="text-decoration-none">Usquare Laundry Solutions pvt ltd</a></li>
+          <li><a class="text-decoration-none">Second floor, Plot No 141, Dattaray Nagar, Nagpur 440024, Maharashtra</a></li>
+        </ul>
+      </div>
+      <div class="col-lg-3 col-md-3 col-sm-3 text-center mt-lg-5 mt-md-5 nav-content">
+        <h4 class="text-start">Register</h4>
+        <hr>
+        <ul class="text-start">
+          <li><a routerLink="/login" class="text-decoration-none">Signup</a></li>
+          <li><a routerLink="/login" class="text-decoration-none">Login</a></li>
+          <li><a routerLink="/register" class="text-decoration-none">Register</a></li>
+        </ul>
+      </div>
+      <div class="col-lg-3 col-md-3 col-sm-3 text-center mt-lg-5 mt-md-5 nav-content">
+        <h4 class="text-start">Get in touch with us</h4>
+        <hr>
+        <div class="row">
+          <div class="col-12 icon-container">
+            <div class="row social-icons">
+              <div class="col-6 text-center instagram">
+                <a href="https://www.instagram.com/laundryholic101/"><i class="fab fa-instagram"></i></a>
+              </div>
+              <div class="col-6 text-center facebook">
+                <a href="https://www.facebook.com/laundryholicnagpur"><i class="fab fa-facebook-f facebook-icon"></i></a>
+              </div>
+              <div class="col-6 text-center twitter">
+                <a href="#"><i class="fab fa-twitter"></i></a>
+              </div>
+              <div class="col-6 text-center google">
+                <a href="https://www.laundryholic.com/"><i class="fab fa-google custom-google-icon"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<section class="footer mt-0 border-top">
+  <div class="blockcode">
+    <footer class="page-footer shadow">
+      <div class="d-flex flex-column text-center color">
+        &copy; Event Organizer, 2024. All rights reserved.
+      </div>
+    </footer>
+  </div>
 </section>
