--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,76 +1,106 @@
 <div class="hero-image ">
-  <div class="hero-text">
+    <!-- <div class="hero-text">
       <h1 style="font-size:50px" class="wow slideInLeft">Come Join the FUN !!!</h1>
       <p class="wow slideInRight">We are the ones Who can make it happen</p>
       <a class="btn wow slideInUp" href="#">Know More</a>
-  </div>
+  </div> -->
+    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li *ngFor="let photo of photos; let i = index" [class.active]="i === currentSlide"
+                (click)="currentSlide = i"></li>
+        </ol>
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+            <div *ngFor="let photo of photos; let i = index" [class.active]="i === currentSlide" class="carousel-item">
+                <img [src]="photo.url" class="d-block w-100" alt="...">
+                <div class="carousel-caption">
+                    <h5 class="fw-bold fs-2 text-light">{{ photo.title }}</h5>
+                </div>
+            </div>
+        </div>
+
+        <!-- Controls -->
+        <a class="carousel-control-prev" role="button" (click)="previousSlide()">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" role="button" (click)="nextSlide()">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
 </div>
 <div class="cardmain ">
-  <div class="container">
-      <h2 class="sectionHead wow slideInLeft"><span class="headtext">Letest Events</span></h2>
-      <div class="row wow slideInRight" *ngIf="eventData;else anotherDiv">
-          <div class="col-md-4 col-sm-12" *ngFor="let eventDatas of eventData;index as i;">
-              <!-- <div class="text-center cardImgMain cardImgMain2" style="background: url(https://eventapp.laundryholic.com/event_backend/event_images/{{eventDatas.event_image}})"> -->
-                <div class="text-center cardImgMain cardImgMain2" style="background: url(http://127.0.0.1:9000/event_images/{{eventDatas.event_image}})">
-                  <!-- <img src="http://127.0.0.1:9000/event_images/{{(eventDatas.event_image)}}" class="img cardImg" /> -->
-              </div>
-              <h4 class="cardTitle">
-                  <mat-card-title>{{eventDatas.event_name}}</mat-card-title><br>
-                  <!-- <mat-card-subtitle>{{eventDatas.event_name}}</mat-card-subtitle> -->
-              </h4>
-              <p class="cardDesc">{{eventDatas.event_details}}</p>
-              <p><strong>Start Date : </strong>&nbsp;&nbsp;&nbsp;{{eventDatas.event_start_date}}</p>
-              <p><strong>End Date : </strong>&nbsp;&nbsp;&nbsp;{{eventDatas.event_end_date}}</p>
-              <button mat-raised-button [routerLink]="['/view-event/',eventDatas.event_name,eventDatas.sr_id]" color="accent">More.......</button>
-          </div>
-      </div>
-      <ng-template #anotherDiv>
-        <div class="msg-div">
-            <p>Currently No Event Found...</p>
+    <div class="container">
+        <h2 class="sectionHead wow slideInLeft"><span class="headtext">Letest Events</span></h2>
+        <div class="row wow slideInRight" *ngIf="eventData;else anotherDiv">
+            <div class="col-md-4 col-sm-12" *ngFor="let eventDatas of eventData;index as i;">
+                <!-- <div class="text-center cardImgMain cardImgMain2" style="background: url(https://eventapp.laundryholic.com/event_backend/event_images/{{eventDatas.event_image}})"> -->
+                <div class="text-center cardImgMain cardImgMain2"
+                    style="background: url(http://127.0.0.1:9000/event_images/{{eventDatas.event_image}})">
+                    <!-- <img src="http://127.0.0.1:9000/event_images/{{(eventDatas.event_image)}}" class="img cardImg" /> -->
+                </div>
+                <h4 class="cardTitle">
+                    <mat-card-title>{{eventDatas.event_name}}</mat-card-title><br>
+                    <!-- <mat-card-subtitle>{{eventDatas.event_name}}</mat-card-subtitle> -->
+                </h4>
+                <p class="cardDesc">{{eventDatas.event_details}}</p>
+                <p><strong>Start Date : </strong>&nbsp;&nbsp;&nbsp;{{eventDatas.event_start_date}}</p>
+                <p><strong>End Date : </strong>&nbsp;&nbsp;&nbsp;{{eventDatas.event_end_date}}</p>
+                <button mat-raised-button [routerLink]="['/view-event/',eventDatas.event_name,eventDatas.sr_id]"
+                    color="accent">More.......</button>
+            </div>
         </div>
-      </ng-template>
-  </div>
+        <ng-template #anotherDiv>
+            <div class="msg-div">
+                <p>Currently No Event Found...</p>
+            </div>
+        </ng-template>
+    </div>
 </div>
 <div class="testimonials wow bounceInUp">
-  <div class="container">
-      <div class="contentmain text-center">
-          <div class="text-center testiImgMain">
-              <img src="assets/img/quotes.svg" class="img testiImg" />
-          </div>
-          <blockquote class="blktext">
-              "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua."
-          </blockquote>
-          <p class="auother"><i>by: Test Authers</i></p>
-      </div>
-  </div>
+    <div class="container">
+        <div class="contentmain text-center">
+            <div class="text-center testiImgMain">
+                <img src="assets/img/quotes.svg" class="img testiImg" />
+            </div>
+            <blockquote class="blktext">
+                "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing
+                elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua."
+            </blockquote>
+            <p class="auother"><i>by: Test Authers</i></p>
+        </div>
+    </div>
 </div>
 <div class="About">
-  <div class="container">
-      <div class="aboutcontentmain">
-          <div class="row d-flex">
-            <div class="col-md-6 col-sm-12 m-auto wow slideInLeft">
-              <div class="abImgmain1 cardImgMain">
-              </div>
-          </div>
-              <div class="col-md-6 col-sm-12 m-auto wow slideInRight">
-                  <div class="Abconmain">
-                      <h4 class="abhead">Hot Event</h4>
-                      <h2 class="abMainhead">New Event in the town.</h2>
-                      <p class="abdesc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                      <div class="text-center">
-                          <a href="#" class="btn findmorebnt"> Find out More Details</a>
-                      </div>
-                  </div>
-              </div>
-              
-          </div>
-      </div>
-  </div>
+    <div class="container">
+        <div class="aboutcontentmain">
+            <div class="row d-flex">
+                <div class="col-md-6 col-sm-12 m-auto wow slideInLeft">
+                    <div class="abImgmain1 cardImgMain">
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-12 m-auto wow slideInRight">
+                    <div class="Abconmain">
+                        <h4 class="abhead">Hot Event</h4>
+                        <h2 class="abMainhead">New Event in the town.</h2>
+                        <p class="abdesc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <div class="text-center">
+                            <a href="#" class="btn findmorebnt"> Find out More Details</a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
 </div>
