--- a/src/styles.css
+++ b/src/styles.css
@@ -20,6 +20,11 @@ html {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+:host{
+    --themeColor:#212121;;
+    --heading-color:#ff7b00;
+}
+
 /*banner main*/
 .hero-image {
     height: 98vh;
@@ -131,16 +136,6 @@ button,
     position: relative;
 }
 
-/* .headtext:after {
-    content: "";
-    width: 50%;
-    height: 4px;
-    background: yellow;
-    position: absolute;
-    top: 125%;
-    left: 25%;
-} */
-
 .testimonials {
     padding: 50px 0;
     background: #f6f8f5;
@@ -179,7 +174,6 @@ button,
 }
 
 .abMainhead {
-    /* margin: 30px 0; */
     font-family: auto;
 }
 
@@ -212,9 +206,6 @@ h2 {
     margin-bottom: 31px !important;
 }
 
-/* .pageStart {
-    min-height: 73vh;
-} */
 thead th{
     background-color: #000 !important;
     color: #febe00 !important;
