--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,55 +1,193 @@
-button {
-  position: absolute;
-  right: 20px;
-  bottom: 15px;
+.event-container-heading h1 {
+  font-size: 80px;
 }
 
-h2 {
-  font-weight: 600;
-  font-size: 24px;
+.event-container-heading p {
+  font-size: 36px;
+  font-weight: lighter;
+  line-height: 47px;
+  color: rgb(62, 60, 60);
+  margin-bottom: 30px;
 }
 
-.example-card {
-  max-width: 400px;
+.event-container-heading a {
+  background-color: black;
+  font-size: 20px;
+  color: white;
+  padding: 11px;
+  text-align: center;
+  text-decoration: none;
 }
 
-.example-header-image {
-  background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
-  background-size: cover;
+.img-event-container-div {
+  background-color: #ff7b00;
+  width: 500px;
+  height: 500px;
+  padding: 50px 20px 45px 0;
 }
 
-  mat-card-content p {
-    text-align: justify;
-    padding: 10px;
+.img-event-container-div img {
+  height: 402px;
+  margin-left: -150px;
+}
+
+.review-main-container {
+  background-color: #ff7b00;
+  padding: 30px 0 30px 80px;
+  margin-top: 50px;
+}
+
+.review-heading {
+  text-align: center;
+  font-size: 35px;
+  font-weight: bold;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  color: #ff7b00;
+}
+
+.review-container {
+  background-color: #f6f8f5;
+  padding-bottom:18px;
+  border-top-left-radius: 75px;
+  /* border-bottom-left-radius: 200px; */
+}
+
+.review-cards {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.card {
+  align-items: center;
+  border-radius: 15px;
+  padding: 20px 0 20px 0;
+  width: 250px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  text-align: center;
+}
+
+.card i {
+  color: #ff7b00;
+  text-decoration: none !important;
+}
+
+@media screen and (min-width:562px) and (max-width:768px) {
+  .event-container-heading h1 {
+    font-size: 70px;
   }
 
-mat-card-content mat-card-title,
-mat-card-content mat-card-subtitle {
-  text-align: justify;
-  padding: 5px 10px 0px 10px;
-  ;
+  .card {
+    width: 30%;
+    align-items: center;
+    border-radius: 15px;
+    padding: 20px 0 20px 0;
+    width: 260px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    text-align: center;
+  }
+
+  .card-3 {
+    display: none;
+  }
+
+  .img-event-container-div img {
+    margin-left: -107px;
+    width: 340px;
+    height: 250px;
+  }
+
+  .img-event-container-div {
+    background-color: #ff7b00;
+    width: 263px;
+    height: 325px;
+    padding: 40px 40px 40px 0;
+  }
+
+  .event-container-heading p {
+    font-size: 22px;
+    font-weight: lighter;
+    line-height: 35px;
+    color: rgb(62, 60, 60);
+    margin-bottom: 30px;
+  }
 }
 
-.event-box {
-  border: 1px solid silver;
-  padding: 20px 15px 20px 15px;
-  border-radius: 5px;
+.img-event-div {
+  width: 400px;
+  height: 450px;
+  background-color: red;
 }
 
-strong {
-  border-bottom: 2px solid #ff4081;
+@media screen and (min-width:992px) and (max-width:1200px) {
+  .img-event-container-div img {
+    height: 402px;
+    margin-left: -184px;
+    width: 450px;
+    height: 270px;
+  }
+
+  .img-event-container-div {
+    background-color: #ff7b00;
+    width: 300px;
+    height: 350px;
+    padding: 42px 42px 42px 0;
+  }
+
+  .event-container-heading p {
+    font-size: 27px;
+    font-weight: lighter;
+    line-height: 39px;
+    color: rgb(62, 60, 60);
+    margin-bottom: 30px;
+  }
 }
 
-.sliderMain {
-  margin-top: -30px;
-}
-.msg-div {
-  width: 50%;
-  margin: auto;
-}
+@media screen and (min-width:320px) and (max-width:480px) {
+  .event-container-heading {
+    text-align: center;
+    margin: auto;
+  }
 
-.msg-div p {
-  font-size: 20px;
-  font-weight: 600;
-  text-align: center;
+  .event-container-heading h1 {
+    font-size: 70px;
+  }
+
+  .img-event-container-div {
+    background-color: #ff7b00;
+    width: 300px;
+    height: 250px;
+    padding: 0;
+    margin: auto;
+    margin-top: 30px;
+  }
+
+  .img-event-container-div img {
+    height: 202px;
+    width: 250px;
+    margin: 25px 0 0px 25px;
+  }
+
+  .review-main-container {
+    background-color: #ff7b00;
+    padding: 0px;
+    margin: auto;
+    margin-top: 50px;
+  }
+
+  .review-heading {
+    text-align: center;
+    font-size: 30px;
+    font-weight: bold;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    color: white;
+  }
+
+  .review-container {
+    background-color: #ff7b00;
+    padding-bottom: 50px;
+
+  }
 }
