--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,28 +1,28 @@
-<div class="hero-image ">
-    <!-- <div class="hero-text">
+<!-- <div class="hero-image"> 
+    <div class="hero-text">
       <h1 style="font-size:50px" class="wow slideInLeft">Come Join the FUN !!!</h1>
       <p class="wow slideInRight">We are the ones Who can make it happen</p>
-      <a class="btn wow slideInUp" href="#">Know More</a>
+      <a class="btn wow slideInDown" href="#">Know More</a>
   </div> -->
-    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+    <!-- <div id="carousel-example-generic" class="carousel slide" data-ride="carousel"> -->
         <!-- Indicators -->
-        <ol class="carousel-indicators">
+        <!-- <ol class="carousel-indicators">
             <li *ngFor="let photo of photos; let i = index" [class.active]="i === currentSlide"
                 (click)="currentSlide = i"></li>
-        </ol>
+        </ol> -->
 
         <!-- Wrapper for slides -->
-        <div class="carousel-inner" role="listbox">
+        <!-- <div class="carousel-inner" role="listbox">
             <div *ngFor="let photo of photos; let i = index" [class.active]="i === currentSlide" class="carousel-item">
                 <img [src]="photo.url" class="d-block w-100" alt="...">
                 <div class="carousel-caption">
                     <h5 class="fw-bold fs-2 text-light">{{ photo.title }}</h5>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <!-- Controls -->
-        <a class="carousel-control-prev" role="button" (click)="previousSlide()">
+        <!-- <a class="carousel-control-prev" role="button" (click)="previousSlide()">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
         </a>
@@ -31,21 +31,21 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
-</div>
-<div class="cardmain ">
+</div> -->
+<!-- <div class="cardmain">
     <div class="container">
         <h2 class="sectionHead wow slideInLeft"><span class="headtext">Letest Events</span></h2>
         <div class="row wow slideInRight" *ngIf="eventData;else anotherDiv">
-            <div class="col-md-4 col-sm-12" *ngFor="let eventDatas of eventData;index as i;">
+            <div class="col-md-4 col-sm-12" *ngFor="let eventDatas of eventData;index as i;"> -->
                 <!-- <div class="text-center cardImgMain cardImgMain2" style="background: url(https://eventapp.laundryholic.com/event_backend/event_images/{{eventDatas.event_image}})"> -->
-                <div class="text-center cardImgMain cardImgMain2"
-                    style="background: url(http://127.0.0.1:9000/event_images/{{eventDatas.event_image}})">
+                <!-- <div class="text-center cardImgMain cardImgMain2"
+                    style="background: url(http://127.0.0.1:9000/event_images/{{eventDatas.event_image}})"> -->
                     <!-- <img src="http://127.0.0.1:9000/event_images/{{(eventDatas.event_image)}}" class="img cardImg" /> -->
-                </div>
+                <!-- </div>
                 <h4 class="cardTitle">
-                    <mat-card-title>{{eventDatas.event_name}}</mat-card-title><br>
+                    <mat-card-title>{{eventDatas.event_name}}</mat-card-title><br> -->
                     <!-- <mat-card-subtitle>{{eventDatas.event_name}}</mat-card-subtitle> -->
-                </h4>
+                <!-- </h4>
                 <p class="cardDesc">{{eventDatas.event_details}}</p>
                 <p><strong>Start Date : </strong>&nbsp;&nbsp;&nbsp;{{eventDatas.event_start_date}}</p>
                 <p><strong>End Date : </strong>&nbsp;&nbsp;&nbsp;{{eventDatas.event_end_date}}</p>
@@ -58,6 +58,41 @@
                 <p>Currently No Event Found...</p>
             </div>
         </ng-template>
+    </div>
+</div> -->
+<!-- ------------------------------------------------------- -->
+<div class="container-fluid homebg text-center align-content-center">
+        <h1 class="wow slideInLeft">Come join the FUN</h1>
+        <p class="mt-lg-5">We are the ones Who can make it happen</p>
+        <button class="btn-home mt-lg-5 mt-md-5 mt-sm-3">know more</button>
+</div>
+<div class="container">
+    <div class="row eventhead text-center align-content-center">
+        <div class="col-lg-12 col-md-12 col-sm-12 ">
+            <h3 class="wow slideInLeft">Latest Events</h3>
+        </div>
+    </div>
+    <div class="row eventcards">
+        <div class="col-lg-3 col-md-3 col-sm-3 rangoli">
+            <h5 class="wow slideInDown">Rangoli Event</h5>
+            <p class="wow slideInDown">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam itaque veritatis totam aperiam ipsa! Illo ipsam explicabo sequi ut neque?</p>
+            <button class="btn wow slideInDown" routerLink="/login">view more</button>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-3 drawing">
+            <h5 class="wow slideInDown">Drawing Event</h5>
+            <p class="wow slideInDown">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam itaque veritatis totam aperiam ipsa! Illo ipsam explicabo sequi ut neque?</p>
+            <button class="btn wow slideInDown" routerLink="/login">view more</button>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-3 drawing">
+            <h5 class="wow slideInDown">Sketching Event</h5>
+            <p class="wow slideInDown">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam itaque veritatis totam aperiam ipsa! Illo ipsam explicabo sequi ut neque?</p>
+            <button class="btn wow slideInDown" routerLink="/login">view more</button>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-3 dancing">
+            <h5 class="wow slideInDown">Dancing Event</h5>
+            <p class="wow slideInDown">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam itaque veritatis totam aperiam ipsa! Illo ipsam explicabo sequi ut neque?</p>
+            <button class="btn wow slideInDown" routerLink="/login">view more</button>
+        </div>
     </div>
 </div>
 <div class="testimonials wow bounceInUp">
@@ -94,7 +129,7 @@
                             consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
                             cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
                             proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                        <div class="text-center">
+                        <div>
                             <a href="#" class="btn findmorebnt"> Find out More Details</a>
                         </div>
                     </div>
