--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,7 +5,9 @@
   <div class="Mainnavbar shadow">
     <nav class="navbar navbar-expand-sm ">
         <div class="container">
-          <a class="navbar-brand  color" href="#">Event Organizer</a>
+<a class="navbar-brand logo" href="#">
+          <img class="img-responsive image-style-logo"
+              src="assets/img/1.png"></a>
           <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -48,4 +50,50 @@
         </div>
       </nav>
     </div>
+    <!-- <nav class="navbar navbar-expand-sm navbar-light bg-light">
+      <div class="container-fluid">
+        <h2 class="set-image"><a class="navbar-brand logo" href="#">
+          <img class="img-responsive image-style-logo"
+              src="assets/img/1.png"></a></h2>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Loundry">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse " id="collapsibleNavbar">
+            <ul class="navbar-nav" *ngIf="!user_type">
+              <li class="nav-item">
+                <a class="nav-link" routerLink="">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" routerLink="aboutus">About us</a>
+              </li>           
+              <li class="nav-item">
+                <a class="nav-link" routerLink="contactus">Contact us</a>
+              </li>  
+              <li class="nav-item">
+                <a class="nav-link" routerLink="login">login</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" routerLink="register">register</a>
+              </li>
+            </ul>
+            <ul class="navbar-nav" *ngIf="user_type =='User'">
+              <li class="nav-item">
+                <a class="nav-link" routerLink="user-dashboard">dashboard</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link"  routerLink="user-event">event</a>
+              </li>           
+              <li class="nav-item">
+                  <a class="nav-link"  routerLink="user-history">History</a>
+              </li> 
+              <li class="nav-item">
+                  <a class="nav-link"  routerLink="user-result">Result</a>
+              </li>  
+              <li class="nav-item">
+                  <a class="nav-link" (click)="logout()">logout</a>
+              </li>
+            </ul>
+          </div>
+      </div>
+    </nav> -->
     </section>
